2015-11-19  Oliver Lemke  <olemke@core-dump.info>

	* typhon/arts/xml.py

	(_ARTSElement.value): Preparation for generic loading of non-basic types
	Call classmethod 'from_xml' of custom classes to create an instance from
	an xml element.

	(write_as_arts_xml): Renamed to _write_xml.

	Rename _arts_types to _basic_types.

	* typhon/arts/types.py: Added skeleton.

	* typhon/arts/tests/test_matpack_types.py (test_save_tensor):

	Shorten docstring. It was cut off in nosetest output.

2015-11-18 Lukas Kluft <lukas.kluft@gmail.com>

	* typhon/arts/tests/test_matpack_types.py:

	Added functions to test the writing of XML files.

	Divided the test functions into two classes TestLoad and TestSave.

	_create_tensor is now a module level function as it is used by all classes.

2015-11-18  Oliver Lemke  <olemke@core-dump.info>

	* typhon/arts/xml.py (write_ndarray): We have 7 Tensors not just 6...

2015-11-18  Oliver Lemke  <olemke@core-dump.info>

	* typhon/arts/xml.py (write_ndarray): Fixed writing of Vectors.

2015-11-17  Oliver Lemke  <olemke@core-dump.info>

	* DESCRIPTION.rst: Mention that this package is for Python 3.

	* typhon/arts/xml.py:

	Strings in ARTS XML files must be enclosed in double quotes.

	Replaced double quotes with single quotes around strings in Python
	source code for consistency.

	Rename etree to ElementTree for clarity.

	* typhon/arts/tests/reference/arrayofstring.xml: Updated.

2015-11-17  Oliver Lemke  <olemke@core-dump.info>

	* typhon/arts/xml.py:

	Add writing support for all basic and matpack types.

	Add support for reading gzipped xml files.

	* typhon/arts/tests/reference/array.xml: Renamed to vector.

	* typhon/arts/tests/test_matpack_types.py:

	Renamed array to vector.

	Added tests for loading ArrayOf{Index,String}.

	* setup.py: Add Python 3.5 to supported languages.

2015-11-11  Oliver Lemke  <olemke@core-dump.info>

	* Uploaded version 0.0.4 to pypi.

	* typhon/__init__.py: Increased version number after pypi upload.
